[metadata]
name = KVDbClient
version = 0.1.0
author = Akhilesh Halageri
author_email = halageri@princeton.edu
description = Client for key value databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seung-lab/KVDbClient
project_urls =
    Bug Tracker = https://github.com/seung-lab/KVDbClient/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = KVDbClient
packages = find:
python_requires = >=3.7

[options.packages.find]
where = KVDbClient
