[metadata]
name = kvdbclient
url = https://github.com/seung-lab/KVDbClient
description = Client for key value databases
long_description = file: README.md
long_description_content_type = text/markdown
author = Akhilesh Halageri
author-email = halageri@princeton.edu
license = License :: OSI Approved :: BSD License
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[files]
packages =
    kvdbclient

[extras]
test =
    pytest
numpy =
    numpy
